--- a/style.css
+++ b/style.css
@@ -115,3 +115,23 @@
 	align-items: center;
 	justify-content: center;
 }
+
+.user-card {
+	min-height: 200px;
+	width: 30%;
+	/* border: 1px solid black; */
+	background-color: orange;
+	box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+	margin-bottom: 10px;
+	margin-left: 30px;
+	margin-top: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 10px;
+}
+.user-card img {
+	width: 200px;
+	height: 200px;
+}
